# ast-nodes

./: README.md  setup.cfg  tox.ini
.github/workflows/: ci.yml
ast_nodes/nodes/: __init__.py  nodes310.py  nodes311.py  nodes36.py  nodes37.py  nodes38.py  nodes39.py
ast_nodes/rewriter/: __init__.py  rewriter310.py  rewriter311.py  rewriter36.py  rewriter37.py  rewriter38.py  rewriter39.py
generate_library/: README.md  generate.py  requirements.txt
tests/: __init__.py  test_ast_nodes.py
tests/randommodules/: mod1.py  mod2.py  mod3.py  mod4.py  mod5.py  mod6.py  mod7.py  mod8.py  mod9.py
