[metadata]
name = ast-nodes
description = Extensible Python AST nodes
version = 1.0.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tristanlatr/ast-nodes
author = Various contributors
license = GNU LESSER GENERAL PUBLIC LICENSE Version 2.1
license_files =
    LICENSE
keywords = static code analysis,python,abstract syntax tree

[options]
packages = find:
install_requires =
    ;no deps
python_requires = >=3.6

[options.extras_require]
test = 
    attrs
    coverage
    pytest
    astor
docs = 
    pydoctor

[options.packages.find]
include =
    ast_nodes*

[mypy]
disallow_any_generics=True
disallow_incomplete_defs=True
disallow_untyped_defs=True
namespace_packages=True
no_implicit_optional=True
show_error_codes=True
warn_no_return=True
warn_redundant_casts=True
warn_return_any=True
warn_unreachable=True
warn_unused_configs=True
warn_unused_ignores=True

[pydoctor]
add-package=["ast_nodes"]
project-name=AST-Nodes 
project-url=https://github.com/tristanlatr/ast-nodes/
html-viewsource-base=https://github.com/tristanlatr/ast-nodes/tree/main
html-output=build/apidocs
docformat=google
process-types=True
theme=readthedocs
intersphinx=
    https://docs.python.org/3/objects.inv
